Add edit page for stylist class

--- a/views/stylists.html.twig
+++ b/views/stylists.html.twig
@@ -19,6 +19,7 @@
          </form>
 
          <p><a href="/">Go to Home Page</a></p>
+         <p><a href="/stylists/{{ stylist.getId }}/edit">Edit this stylist</a>
 
     </body>
 </html>
