Add delete functionality to the stylist page

--- a/views/stylist_edit.html.twig
+++ b/views/stylist_edit.html.twig
@@ -11,5 +11,12 @@
 
             <button type="submit">Update<button>
         </form>
+
+        <form action="/stylists/{{ stylist.getId }}" method="post">
+            <input name="_method" type="hidden" value="delete">
+
+            <button type="submit">Delete this Stylist</button>
+
+        </form>
     </body>
 </html>
