--- a/views/stylists.html.twig
+++ b/views/stylists.html.twig
@@ -5,7 +5,7 @@
     <body>
         <h1>{{ stylist.getName }}</h1>
          {% for client in clients %}
-        <p> {{ client.getClientName() }} </p>
+        <p> <a href="/client/{{ client.getClientId }}/edit">{{ client.getClientName() }} </a></p>
          {% endfor %}
 
          <h3> Add a Client! </h3>
