Format changes in twig files

--- a/views/stylist_edit.html.twig
+++ b/views/stylist_edit.html.twig
@@ -9,7 +9,7 @@
             <label for="new_name">Rename your Stylist:</label>
             <input id="new_name" name="new_name" type="text">
 
-            <button type="submit">Update<button>
+            <button type="submit">Update</button>
         </form>
 
         <form action="/stylists/{{ stylist.getId }}" method="post">
